@@ -7,6 +7,7 @@
 		<PROPERTY NAME="lineComment" VALUE="#" />
 		<PROPERTY NAME="indentOpenBrackets" VALUE="{" />
 		<PROPERTY NAME="indentCloseBrackets" VALUE="}" />
+		<PROPERTY NAME="lineUpClosingBracket" VALUE="true" />
 	</PROPS>
 	<RULES ESCAPE="\" IGNORE_CASE="FALSE" HIGHLIGHT_DIGITS="TRUE">
 		<!-- Comments -->
@@ -92,7 +93,7 @@
 			<BEGIN>`</BEGIN>
 			<END>`</END>
 		</SPAN>
-		
+
 		<!-- Readins -->
 		<SPAN TYPE="LITERAL1" DELEGATE="LITERAL">
 			<BEGIN>&lt;&lt;EOF</BEGIN>
